deployment-webapp/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cratt-pod
spec:
  serviceName: cratt-service
  replicas: 1
  selector:
    matchLabels:
      app: cratt-pod
  template:
    metadata:
      labels:
        app: cratt-pod
    spec:
      containers:
        - name: cratt
          image: inseefrlab/satellite-images-webapp:v0.0.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "3"
              memory: "10Gi"
            limits:
              cpu: "4"
              memory: "20Gi"
