deployment-webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cratt-service  #nom du service unique (trio)
spec:
  type: ClusterIP
  ports:
    - name: http-cratt
      port: 3000 # port du service
      protocol: TCP
      targetPort: 3000  # port standard
  selector:
    app: cratt-pod # c'est bien le label mis au pod qui est recherché local à un namespace
