deployment-webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cratt-ingress
spec:
  rules:
  - host: cratt.lab.sspcloud.fr
    http:
      paths:
      - backend:
          service:
            name: cratt-service
            port:
              number: 3000
        path: /
        pathType: Prefix
    tls:
    - hosts:
        - cratt.lab.sspcloud.fr
